Updated the search endpoint to return URIs instead of URLs (#113)